# Agos

./: .gitignore  README.md  _sbtest.mjs  components.json  instrumentation.ts  package.json  playwright.config.ts  playwright.freighter.config.ts  pnpm-lock.yaml  vercel.json  vitest.config.ts
app/: globals.css
app/[locale]/: layout.tsx  page.tsx
app/[locale]/dashboard/: page.tsx
app/[locale]/stats/: page.tsx
app/api/stats/: route.ts
app/api/streams/: route.ts
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile  README.md  rust-toolchain.toml
contracts/agos-stream/: Cargo.toml
contracts/agos-stream/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/agos-stream/test_snapshots/test/: create_is_blocked_while_paused.1.json  create_locks_full_deposit.1.json  invalid_create_parameters_are_rejected.1.json  missing_stream_is_reported.1.json  stop_after_partial_withdraw_settles_correctly.1.json  stop_on_stopped_is_rejected.1.json  stop_settles_vested_and_reclaims_remainder.1.json  vesting_is_linear_over_time.1.json  withdraw_on_completed_is_rejected.1.json  withdraw_pays_vested_to_recipient.1.json
contracts/scripts/: deploy.sh
contracts/ts-client/: agos-stream-client.ts
docs/: ARCHITECTURE.md  SUBMISSION.txt  description.txt  design.txt  technical-flow.txt
messages/: en.json
scripts/: seed-demo.ts
src/server/config/: env.public.ts  env.ts
src/server/controller/: auth.controller.ts
src/server/lib/: bootstrap.ts  eventBus.ts
tests/: setup.ts
tests/e2e/: main-flow.spec.ts  prod-real.spec.ts
tests/ui/: StreamCard.test.tsx
(+34 files in other folders)
