[workspace]
resolver = "2"
members = ["agos-stream"]

# Optimized for on-chain Wasm size and determinism. `overflow-checks = true`
# is deliberate: arithmetic on token amounts must trap, never wrap.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
